# FingerNet

./: .gitignore  Dockerfile  README.md
pytorch/: README.md  convert_weights.py  example.ipynb  example_coremodel.ipynb  example_singleinfer.ipynb  fingernet.py  fingernet_cli.py  inspect_h5.py  organize_layers.py  pyproject.toml  run_distributed.py  test.py
pytorch/examples/: example_batchinfer.ipynb  example_batchinfer.py
pytorch/fingernet/: __init__.py  api.py  cli.py  distributed.py  h52pth.py  inference.py  interface.py  lightning.py  lightning_datamodule.py  lightning_model.py  model.py  plot.py
pytorch/utils/: convert_weights.py  fnet_infer.py
