[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fingernet"
version = "1.0.0"
authors = [
  { name="João Felipe Contreras", email="jfcm.pipe@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/JF235/FingerNet"

[project.scripts]
fingernet = "fingernet.cli:main"

[tool.setuptools.packages.find]
where = ["."]